--- a/public/css/header.css
+++ b/public/css/header.css
@@ -9,8 +9,13 @@ header{
     left: 0;
     box-shadow: 0 .3rem .5rem rgba(0, 0, 0, .3);
     font-family: var(--karla);
-    background-color: rgba(250, 250, 250, .5);
+    background-color: rgba(250, 250, 250, .3);
     z-index: 3;
+    transition: all .5s ease;
+}
+header.headerSolid{
+    background-color: var(--white);
+    transition: all .5s ease;
 }
 header a#logo{
     height: 100%;
