--- a/src/views/products/detail.ejs
+++ b/src/views/products/detail.ejs
@@ -15,7 +15,7 @@
                 <section id="icons">
                     <i class="fas fa-dollar-sign"></i>
                     <i class="fas fa-shopping-cart"></i>
-                    <h3><%= producto.price %></h3>
+                    <h3>$<%= producto.price %></h3>
                 </section>
             </section>
         </article>
