--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -29,7 +29,7 @@
                             <img src="<%= producto.img[0].url %> " alt="">
                         </figure>
                         <section class="info">
-                            <h3><%= producto.price %> </h3>
+                            <h3>$<%= producto.price %> </h3>
                             <i class="fas fa-shopping-cart"></i>
                         </section>
                     </a>
