--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -3,7 +3,7 @@
     <nav>
         <ul id="links">
             <li><a href="/register">Sing-up</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="/contact">Contact</a></li>
             <li><a href="/cart">Cart</a></li>
             <li><a href="">About Us</a></li>
             <button type="button" class="cancel-button"><i class="fas fa-times"></i></button>
