--- a/src/views/products/detail.ejs
+++ b/src/views/products/detail.ejs
@@ -19,6 +19,86 @@
                 </section>
             </section>
         </article>
+        <section id="options">
+            <article class="cardProduct">
+                <section class="infoCard">
+                    <h4>Camisa</h4>
+                </section>
+                <figure>
+                    <img src="/assets/img/Camisa 2.jpg" alt="">
+                </figure>
+                <section class="infoCard">
+                    <h5>$3000</h5>
+                    <i class="fas fa-shopping-cart"></i>
+                </section>
+            </article>
+            <article class="cardProduct">
+                <section class="infoCard">
+                    <h4>Camisa</h4>
+                </section>
+                <figure>
+                    <img src="/assets/img/Camisa 3.jpg" alt="">
+                </figure>
+                <section class="infoCard">
+                    <h5>$3000</h5>
+                    <i class="fas fa-shopping-cart"></i>
+                </section>
+            </article>
+            <article class="cardProduct">
+                <section class="infoCard">
+                    <h4>Camisa</h4>
+                </section>
+                <figure>
+                    <img src="/assets/img/Camisa 4.jpg" alt="">
+                </figure>
+                <section class="infoCard">
+                    <h5>$3000</h5>
+                    <i class="fas fa-shopping-cart"></i>
+                </section>
+            </article>
+            <article class="cardProduct">
+                <section class="infoCard">
+                    <h4>Camisa</h4>
+                </section>
+                <figure>
+                    <img src="/assets/img/Camisa 5.jpg" alt="">
+                </figure>
+                <section class="infoCard">
+                    <h5>$3000</h5>
+                    <i class="fas fa-shopping-cart"></i>
+                </section>
+            </article>
+        </section>
+        <section id="comments">
+            <form action="">
+                <label>
+                    <textarea cols="30" rows="10" placeholder="Comment"></textarea>
+                    <button type="submit"><i class="fas fa-share"></i></button>
+                </label>
+            </form>
+            <section id="userComments">
+                <article class="comment">
+                    <h1>Pepe</h1>
+                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i><i class="far fa-star"></i>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint mollitia ipsum vel asperiores odit corrupti.</p>
+                </article>
+                <article class="comment">
+                    <h1>Pepe</h1>
+                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i><i class="far fa-star"></i>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint mollitia ipsum vel asperiores odit corrupti.</p>
+                </article>
+                <article class="comment">
+                    <h1>Pepe</h1>
+                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i><i class="far fa-star"></i>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint mollitia ipsum vel asperiores odit corrupti.</p>
+                </article>
+                <article class="comment">
+                    <h1>Pepe</h1>
+                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i><i class="far fa-star"></i>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint mollitia ipsum vel asperiores odit corrupti.</p>
+                </article>
+            </section>
+        </section>
     </main>
     <%- include("../partials/footer") %>
     <script src="/js/styles.js"></script>
