--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -1,41 +1,37 @@
-main#register{
+main#contact{
     width: 100%;
     display: flex;
     justify-content: center;
     flex-flow: row wrap;
     padding-top: 10vh;
 }
-main#register section#sing-up{
+main#contact article{
     width: 80%;
     display: flex;
     justify-content: center;
     flex-flow: row wrap;
-    position: relative;
+    box-shadow: 0 .3rem .5rem rgba(0, 0, 0, .2);
     margin: 1rem 0;
-    box-shadow: 0 .3rem .5rem rgba(0, 0, 0, .3);
 }
-main#register section#sing-up article{
+main#contact article figure{
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
-main#register section#sing-up article figure{
-    width: 100%;
-}
-main#register section#sing-up article img{
+main#contact article figure img{
     width: 100%;
     max-height: 70vh;
 }
-main#register section#sing-up article h1{
+main#contact article figure h1{
     position: absolute;
-    color: var(--white);
     font-family: var(--anton);
-    font-size: 2.5rem;
-    pointer-events: none;
-    text-shadow: 0 .3rem .5rem rgba(0, 0, 0, .5);
+    color: var(--white);
+    font-size: 1.3;
+    text-shadow: 0 .2rem .3rem rgba(0, 0, 0, .3);
 }
-main#register section#sing-up form{
+main#contact article form{
     width: 100%;
     display: flex;
     justify-content: center;
@@ -43,53 +39,61 @@ main#register section#sing-up form{
     flex-flow: row wrap;
     padding: 1rem;
 }
-main#register section#sing-up form label{
+main#contact article form label{
     width: 80%;
     position: relative;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid var(--primary-color);
     margin: 1rem 0;
     padding: .5rem;
 }
-main#register section#sing-up form label p{
+main#contact article form label p{
     position: absolute;
     left: 15%;
     pointer-events: none;
     color: var(--primary-color);
     font-family: var(--karla);
+    pointer-events: none;
     transition: all .5s ease-in-out;
 }
-main#register section#sing-up form label.complete p,
-main#register section#sing-up form label input:focus + p{
+main#contact article form label.complete p,
+main#contact article form label input:focus + p{
     transform: translateY(-1.5rem);
 }
-main#register section#sing-up form label input{
-    width: 80%;
+main#contact article form label input{
+    width: 90%;
     background-color: transparent;
     border: none;
     outline: none;
     font-family: var(--karla);
 }
-main#register section#sing-up form label i, span, button{
+main#contact article form label i{
     width: 10%;
     background-color: transparent;
     color: var(--primary-color);
     border: none;
     outline: none;
 }
-main#register section#sing-up form section#button-register{
+main#contact article form textarea{
+    width: 100%;
+    height: 25vh;
+    padding: .5rem;
+    box-shadow: 0 .3rem .5rem rgba(0, 0, 0, .3);
+    font-family: var(--karla);
+    outline: none;
+    border: none;
+    resize: none;
+}
+main#contact article form section#buttonMessage{
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 1rem 0;
 }
-main#register section#sing-up form button{
-    cursor: pointer;
-}
-main#register section#sing-up form section#button-register button{
+main#contact article form section#buttonMessage button{
     width: 30%;
     padding: .5rem;
     border: 1px solid var(--primary-color);
@@ -100,34 +104,18 @@ main#register section#sing-up form section#button-register button{
     cursor: pointer;
     transition: all .5s ease-in-out;
 }
-main#register section#sing-up form section#button-register button:hover{
+main#contact article form section#buttonMessage button:hover{
     background-color: transparent;
     color: var(--primary-color);
 }
-main#register h2{
-    width: 100%;
-    text-align: center;
-    margin-bottom: 1rem;
-    font-family: var(--karla);
-    font-size: 1.3rem;
-}
-main#register h2 a{
-    color: var(--primary-color);
-}
-main#register h2 a:hover{
-    text-decoration: underline;
-}
 @media screen and (min-width: 768px) {
-    main#register section#sing-up{
+    main#contact article{
         justify-content: space-between;
     }
-    main#register section#sing-up article{
+    main#contact article figure{
         width: 50%;
     }
-    main#register section#sing-up form{
+    main#contact article form{
         width: 50%;
-    }
-    main#register section#sing-up form label{
-        margin: .3rem;
     }
 }
