--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/css/login.css">
     <link rel="stylesheet" href="/css/detail.css">
     <link rel="stylesheet" href="/css/cart.css">
+    <link rel="stylesheet" href="/css/contact.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,5 +21,5 @@
 
     <script src="https://kit.fontawesome.com/635914e016.js" crossorigin="anonymous"></script>
 
-    <title>Beach Flow |</title>
+    <title><%= title %> </title>
 </head>
