--- a/src/views/products/cart.ejs
+++ b/src/views/products/cart.ejs
@@ -2,6 +2,9 @@
 <html lang="en">
     <%- include("../partials/head") %> 
 <body>
+    <article id="pre-loader">
+        <h2>Loading</h2><span></span><span></span><span></span>
+    </article>
     <%- include("../partials/header") %>
     <main id="cart">
         <article class="cardProduct">
@@ -21,7 +24,7 @@
                 <img src="/assets/img/Lentes 1.png" alt="">
             </figure>
             <section class="infoProduct">
-                <h1>Camisa 1</h1>
+                <h1>Lentes</h1>
                 <h2>3000</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, suscipit est dicta laudantium, fugiat non libero nam labore quod dolores ratione illum! Repellat placeat dignissimos ex delectus necessitatibus nesciunt aperiam!</p>
             </section>
@@ -33,7 +36,7 @@
                 <img src="/assets/img/Malla 1.png" alt="">
             </figure>
             <section class="infoProduct">
-                <h1>Camisa 1</h1>
+                <h1>Malla</h1>
                 <h2>3000</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, suscipit est dicta laudantium, fugiat non libero nam labore quod dolores ratione illum! Repellat placeat dignissimos ex delectus necessitatibus nesciunt aperiam!</p>
             </section>
@@ -45,7 +48,7 @@
                 <img src="/assets/img/Reloj 1.jpg" alt="">
             </figure>
             <section class="infoProduct">
-                <h1>Camisa 1</h1>
+                <h1>Reloj</h1>
                 <h2>3000</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, suscipit est dicta laudantium, fugiat non libero nam labore quod dolores ratione illum! Repellat placeat dignissimos ex delectus necessitatibus nesciunt aperiam!</p>
             </section>
