--- a/src/views/users/contact.ejs
+++ b/src/views/users/contact.ejs
@@ -2,8 +2,10 @@
 <html lang="en">
     <%- include("../partials/head") %>
 <body>
+    <article id="pre-loader">
+        <h2>Loading</h2><span></span><span></span><span></span>
+    </article>
     <%- include("../partials/header") %>
-
     <main id="contact">
         <article>
             <figure><img src="/assets/img/img-message.jpg" alt=""><h1>Message</h1></figure>
