--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -2,6 +2,9 @@
 <html lang="en"> 
     <%- include("../partials/head") %> 
 <body>
+    <article id="pre-loader">
+        <h2>Loading</h2><span></span><span></span><span></span>
+    </article>
     <%- include("../partials/header") %>
     <main id="login">
         <section id="section-login">
