--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -2,6 +2,9 @@
 <html lang="en">
     <%- include("../partials/head") %> 
 <body>
+    <article id="pre-loader">
+        <h2>Loading</h2><span></span><span></span><span></span>
+    </article>
     <%- include("../partials/header") %>
     <main id="register">
         <section id="sing-up">
@@ -31,13 +34,15 @@
                     <i class="fas fa-lock"></i><input type="password" class="password input-float"></input><p class="placeholder">Repit Password</p><button type="button" class="btn-eye"><i class="fas fa-eye"></i></button>
                 </label>
                 <section id="button-register">
-                    <button type="submit">SING-UP</button>
+                    <button type="submit" id="button">SING-UP</button>
                 </section>
             </form>
         </section>
         <h2>If you already have an account <a href="/login">log in</a></h2>
     </main>
     <%- include("../partials/footer") %>  
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/js/styles.js"></script>
+    <script src="/js/sweetAlert.js"></script>
 </body>
 </html>
