--- a/public/css/body.css
+++ b/public/css/body.css
@@ -38,3 +38,67 @@ h1::selection, h2::selection, h3::selection, h4::selection, h5::selection, p::se
 img::selection{
     background-color: transparent;
 }
+html{
+    scroll-behavior: smooth;
+}
+article#pre-loader{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    background-color: rgba(255, 255, 255, 0.604);
+    z-index: 20;
+    transition: all .5s ease;
+}
+article#pre-loader h2{
+    font-size: 3rem;
+    font-family: var(--anton);
+    color: var(--blue);
+    transition: all .5s ease;
+}
+article#pre-loader span{
+    width: 1rem;
+    height: 1rem;
+    border-radius: 50%;
+    background-color: var(--blue);
+    margin-left: .5rem ;
+    transform: translateY(.8rem);
+    transition: all .5s ease;
+    animation: load 2s ease-in-out infinite;
+}
+article#pre-loader h2::selection{
+    background-color: transparent;
+    color: transparent;
+}
+article#pre-loader span:nth-child(1){
+    animation-delay: .1s;
+}
+article#pre-loader span:nth-child(2){
+    animation-delay: .3s;
+}
+article#pre-loader span:nth-child(3){
+    animation-delay: .5s;
+}
+@keyframes load{
+    0%, 75%, 100%{
+        transform: translateY(0) scale(1);
+    }
+    25%{
+        transform: translateY(1rem);
+    }
+    50%{
+        transform: translateY(-1rem), scale(1.2);
+    }
+}
+@media screen and (min-width: 768px) {
+    article#pre-loader h2{
+        font-size: 4rem;
+    }
+    article#pre-loader span{
+        width: 1.5rem;
+        height: 1.5rem;
+        transform: translateY(.8rem);
+    }
+}
