--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/css/detail.css">
     <link rel="stylesheet" href="/css/cart.css">
     <link rel="stylesheet" href="/css/contact.css">
-    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.7/dist/sweetalert2.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-material-ui/material-ui.min.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
