--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -25,13 +25,15 @@
                     <i class="fas fa-lock"></i><input type="password" class="password input-float"></input><p class="placeholder">Password</p><button type="button" class="btn-eye"><i class="fas fa-eye"></i></button>
                 </label>
                 <section id="button-login">
-                    <button type="submit">LOG-IN</button>
+                    <button type="button" id="button">LOG-IN</button>
                 </section>
             </form>
         </section>
         <h2>If you don´t have an account <a href="/register">sing up</a></h2>
     </main>
     <%- include("../partials/footer") %>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.7/dist/sweetalert2.all.min.js"></script>
     <script src="/js/styles.js"></script>
+    <script src="/js/sweetAlert.js"></script>
 </body>
 </html>
