--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -34,14 +34,14 @@
                     <i class="fas fa-lock"></i><input type="password" class="password input-float"></input><p class="placeholder">Repit Password</p><button type="button" class="btn-eye"><i class="fas fa-eye"></i></button>
                 </label>
                 <section id="button-register">
-                    <button type="submit" id="button">SING-UP</button>
+                    <button type="button" id="button">SING-UP</button>
                 </section>
             </form>
         </section>
         <h2>If you already have an account <a href="/login">log in</a></h2>
     </main>
     <%- include("../partials/footer") %>  
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.7/dist/sweetalert2.all.min.js"></script>
     <script src="/js/styles.js"></script>
     <script src="/js/sweetAlert.js"></script>
 </body>
