--- a/public/css/body.css
+++ b/public/css/body.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 body{
+    font-family: var(--karla);
     overflow-x: hidden;
 }
 :root{
@@ -57,6 +58,10 @@ article#pre-loader h2{
     font-family: var(--anton);
     color: var(--blue);
     transition: all .5s ease;
+    text-shadow: -.2rem .3rem 0 rgba(0, 0, 0, .1),
+    -.4rem .3rem 0 rgba(0, 0, 0, .1),
+    -.6rem .3rem 0 rgba(0, 0, 0, .1);
+    ;
 }
 article#pre-loader span{
     width: 1rem;
@@ -66,6 +71,9 @@ article#pre-loader span{
     margin-left: .5rem ;
     transform: translateY(.8rem);
     transition: all .5s ease;
+    box-shadow: -.2rem .3rem 0 rgba(0, 0, 0, .1),
+    -.4rem .3rem 0 rgba(0, 0, 0, .1),
+    -.6rem .3rem 0 rgba(0, 0, 0, .1);
     animation: load 2s ease-in-out infinite;
 }
 article#pre-loader h2::selection{
@@ -83,13 +91,13 @@ article#pre-loader span:nth-child(3){
 }
 @keyframes load{
     0%, 75%, 100%{
-        transform: translateY(0) scale(1);
+        transform: translateY(.8rem) scale(1);
     }
     25%{
         transform: translateY(1rem);
     }
     50%{
-        transform: translateY(-1rem), scale(1.2);
+        transform: translateY(-2rem), scale(1.2);
     }
 }
 @media screen and (min-width: 768px) {
